# AlgoLens

./: .gitignore  README.md  components.json  devlog.txt  devlog2.txt  devlog4.txt  package.json  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/src/stores/: update.store.ts
components/: Editor.tsx
components/editor/: Editor.tsx  LoadingOverlay.tsx  OnboardingOverlay.tsx
components/editor/dialogs/: AboutDialog.tsx  BenchmarkDialog.tsx  PerformanceDialog.tsx  ShortcutsDialog.tsx
components/editor/explorer/: FileExplorer.tsx  FileExplorerContextMenu.tsx  FileExplorerNewInput.tsx  FileTreeIcons.tsx  FileTreeNode.tsx  explorer.data.ts  explorer.types.ts  filesystemUtils.ts
components/editor/menubar/: MenuBar.tsx  MenuBarDropdown.tsx  MenuBarItem.tsx  MenuBarSeparator.tsx  menubar.data.ts  menubar.types.ts
components/menubar/: MenuBarDropdown.tsx  MenuBarItem.tsx  menubar.data.ts
components/monaco/: MonacoEditor.tsx
desktop/: CMakeLists.txt  main.cpp
desktop/installer/: AlgoLens.iss
desktop/renderer/: app.cpp  app.h
desktop/source/shell/: AlgoLensApp.cpp
lib/: errorMessages.ts  executionClient.ts  executionTypes.ts  nativeBridge.ts
lib/ai/: client.ts
lib/benchmark/: classifierBenchmark.ts
lib/classifier/: confidence.ts  index.ts  narration.ts  types.ts
lib/classifier/tier1/: bfs.ts  (+8 more)
server/: README.md  package.json  tsconfig.json
server/src/: index.ts  types.ts
store/: useClassifierStore.ts  useTelemetryStore.ts  useTraceStore.ts
terminal/: index.js  package-lock.json  package.json
types/: global.d.ts
web/lib/: site.ts
(+66 files in other folders)
